# ksplayer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: main.cpp
